# wasp

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
include/: alignment.h  benchmark.h  builder.h  command_line.h  components.h  counters.h  generator.h  graph.h  leaves.h  platform_atomics.h  profiling.h  random_gen.h  reader.h  timer.h  types.h  util.h  writer.h
include/bucketing/: base.h  bucket.h  current-bucket.h  current_bucket.h  deque_bucket.h  executor.h  frontier.h  next_buckets.h
include/containers/: bitmap.h  buckets_bitmap.h  chunk.h  static_buffer.h
include/numa/: numa_distance_map.h
include/parallel/: atomics_array.h  deque.h  padded_array.h  pparray.h  pvector.h  vector.h
include/profiling/: papi_helper.h  stats.h
src/: CMakeLists.txt  bfs.cc  dijkstra.cc  sssp-ablation.cc  sssp.cc
tests/: CMakeLists.txt  deque_test.cc
utils/: CMakeLists.txt  check-graph.cc  check-weight.cc  converter.cc  degree.cc  hist-degree.cc  hist-weight.cc  read.cc  sources.cc  stats.cc  threads_info.cc  weight.cc  weights.cc
